--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  gn-20191003.tar.xz: cc5a684eb3e4889c4eefb4862808a558d09a4ce4
+  gn-20200209.tar.zst: bb21e7bc3d3ee3853a5ff3ac0518c17594caa94a
